--- a/docs/JS/Function/预编译.md
+++ b/docs/JS/Function/预编译.md
@@ -75,6 +75,169 @@ console.log(window.a); // undefined
 console.log(a); // ReferenceError: a is not defined
 ```
 
+## 5.内部声明变量
+
+```javascript
+// 变量未声明，在函数内部直接赋值，被提升到全局
+function test() {
+    var a = b = 1;
+}
+test();
+console.log(b); // 1
+console.log(window.a); // undefined
+console.log(a); // ReferenceError: a is not defined
+```
+
+## 6.预编译过程: AO与GO
+JS代码在执行的时候会开辟一个全局的执行栈，也叫做全局执行上下文GO。当遇到函数的时候，会开辟一个函数执行栈，也叫做函数上下文AO。
+
+### AO：activation object, 函数上下文。创建AO过程:
+
+* 寻找形参和变量声明
+* 实参值赋值给形参
+* 找函数声明
+* 执行赋值
+
+**AO分析:**
+```javascript
+function test(a) {
+    console.log(a); // ƒ a() {}
+    var a = 1;
+
+    console.log(a); // 1
+    function a() {}
+    console.log(a); // 1
+
+    var b = function(){}
+    console.log(b); // ƒ (){}
+
+    function d() {}
+}
+
+test(2);
+
+AO = {
+    a: undefined >
+        2 >
+        function a(){} >
+        1,
+    b: undefined >
+        function () {},
+    d: function d() {},
+}
+````
+:::tip
+首先在函数内查找形参和变量声明,找到 a,b  接着给形参赋值 此时a=2, 查找函数声明 function a , function b , functon d. 最后从上到下执行代码赋值操作。 
+:::
+
+```javascript
+function test(a, b) {
+    console.log(a); // 5
+    c = 0;
+    var c;
+    a = 5;
+    b = 6;
+    console.log(b); // 
+    function b() {}
+    function d() {}
+    console.log(b); 
+}
+
+test(1);
+
+AO = {
+    a: undefined > 
+        1 >
+        5,
+    b: undefined > 
+        function b(){} >
+        6,
+    c: undefined > 
+        0,
+    d: function d() {}
+}
+```
+
+
+
+
+### GO：global object，全局上下文（等于window）创建GO过程:
+
+* 找变量声明
+* 找函数式声明
+* 执行赋值
+
+**GO分析:**
+
+```javascript
+var a = 1;
+function a () {
+    console.log(2);
+}
+console.log(a); // 1
+
+GO = {
+    a: undefined > function a() {} > 1
+}
+
+```
+
+```javascript
+console.log(a, b); // ƒ a() {} undefined
+function a() {}
+var b = function() {}
+
+GO = {
+    b: undefined,
+    a: undefined > function a() {}
+}
+
+```
+
+**AO与GO结合**
+```javascript
+function test() {
+    var a = b = 1;
+    console.log(a); // 1
+}
+
+test();
+
+GO = {
+    b: 1
+}
+
+// AO中有找AO，没有找GO
+AO = {
+    a: undefined > 1
+}
+```
+
+```javascript
+var b = 3;
+console.log(a); // function a(){...}
+function a(a) {
+    console.log(a); // function a() {}
+    var a = 2;
+    console.log(a); // 2
+    function a() {}
+    var b = 5;
+    console.log(b); // 5
+}
+
+a(1);
+
+GO = {
+    b: undefined > 3,
+    a: function a(){...}
+}
+
+AO = {
+    a: undefined > 1 > function a() {} > 2,
+    b: undefined > 5,
+}
+```
+
 
 
 
