--- a/docs/JS/Function/预编译.md
+++ b/docs/JS/Function/预编译.md
@@ -91,7 +91,7 @@ console.log(a); // ReferenceError: a is not defined
 ## 6.预编译过程: AO与GO
 JS代码在执行的时候会开辟一个全局的执行栈，也叫做全局执行上下文GO。当遇到函数的时候，会开辟一个函数执行栈，也叫做函数上下文AO。
 
-### AO：activation object, 函数上下文。创建AO过程:
+**AO：activation object, 函数上下文。创建AO过程:** 
 
 * 寻找形参和变量声明
 * 实参值赋值给形参
@@ -161,7 +161,7 @@ AO = {
 
 
 
-### GO：global object，全局上下文（等于window）创建GO过程:
+**GO：global object，全局上下文（等于window）创建GO过程:** 
 
 * 找变量声明
 * 找函数式声明
