--- a/docs/Webpack/打包样式资源.md
+++ b/docs/Webpack/打包样式资源.md
@@ -9,6 +9,13 @@
 
 1. 新建一个目录 新建一个src文件夹，并在其中指定入口文件 index.js  新建index.css  , 将 index.css 文件导入到 index.js 文件中。
 
+```javascript
+// index.js
+// 引入样式文件
+import './index1.css';
+import './index.less';
+```
+
 2. 初始化项目及安装webpack-cli等不详细写,看上一篇。但是打包样式文件需要安装 css-loader 和 style-loader
 
 ```
