--- a/docs/JS/Function/闭包.md
+++ b/docs/JS/Function/闭包.md
@@ -207,10 +207,11 @@ for(let i = 0 ; i<list.length ; i++) {
 }
 ```
 **方式二**
-利用闭包
+
+利用闭包,
 ```javascript
         var list = document.querySelectorAll('.item');
-        for(let i = 0 ; i<list.length ; i++) {
+        for(var i = 0 ; i<list.length ; i++) {
          (function(j) {
              list[j].onclick = function(){
                  console.log(j+1);
