--- a/docs/JS/Event/事件级别.md
+++ b/docs/JS/Event/事件级别.md
@@ -79,3 +79,57 @@ IE8及一下
 **结论：**
 * 一个元素的一个事件，可以绑定多个响应函数。不存在响应函数被覆盖的情况。**注意**：执行顺序是，后绑定的先执行。
 * attachEvent()中的this，是window。
+
+**DOM二级事件兼容性写法**
+
+```javascript
+/**封装一个函数
+ *  参数：
+ *  element 需要绑定事件的对象
+ *  eventType 事件类型 例如： click 。。
+ *  callback  回调
+ */
+  function myBindEvent(element , eventType , callback) {
+        if(element.addEventListener) {
+            element.addEventListener(eventType , callback , false);
+        }else {
+            element.attachEvent("on"+eventType , function(){
+                                    //在匿名函数 function 中调用回调函数callback
+                                    callback.call(element);
+                                });
+        }
+  }
+```
+
+## 事件对象
+
+当事件的响应函数被触发时，会产生一个事件对象`event`。浏览器每次都会将这个事件`event`作为实参传进之前的响应函数。
+
+这个对象中包含了与当前事件相关的一切信息。比如鼠标的坐标、键盘的哪个按键被按下、鼠标滚轮滚动的方向等。
+
+* 普通浏览器 event 
+* ie678支持 window.event 
+
+**兼容性写法**
+```javascript
+event = event || window.event
+```
+```javascript
+oDiv.onclick = function (e) {
+    e = e || window.e;
+    console.log(e);
+}
+```
+打印出的常见属性： 
+
+![avatar](../../.vuepress/public/image/e.png)
+
+## Event案列(demo)
+
+### 1.盒子跟随鼠标移动
+
+
+### 2.鼠标盒子内移动
+
+
+### 3.放大镜效果
