--- a/docs/CSS/动画/动画.md
+++ b/docs/CSS/动画/动画.md
@@ -1,3 +1,76 @@
 <div align='center' ><font size='70'>动画animation</font></div>
 
 ------
+
+动画是可通过设置**多个节点** 来精确控制一个或一组动画，常用来实现**复杂**的动画效果。
+
+
+## 1.定义动画的步骤
+
+（1）通过@keyframes定义动画；
+
+（2）将这段动画通过百分比，分割成多个节点；然后各节点中分别定义各属性；
+
+（3）在指定元素里，通过 `animation` 属性调用动画。
+
+```
+    定义动画：
+        @keyframes 动画名{
+            from{ 初始状态 }
+            to{ 结束状态 }
+        }
+
+     调用：
+      animation: 动画名称 持续时间；
+```
+
+## 2.animation属性
+
+1. 动画名称：
+```javascript
+animation-name: move;
+```
+2. 执行一次动画的持续时间：
+```javascript
+animation-duration: 4s;
+```
+**上面两个属性，是必选项，且顺序固定。**
+
+3. 动画的执行次数：
+
+```javascript
+animation-iteration-count: 1;       //iteration的含义表示迭代
+```
+
+4. 动画的方向：
+```javascript
+animation-direction: alternate;
+```
+**属性值：normal 正常，alternate 反向。**
+
+5. 动画延迟执行：
+```javascript
+	animation-delay: 1s;
+```
+
+6. 设置动画结束时，盒子的状态：
+```javascript
+animation-fill-mode: forwards;
+```
+**属性值： forwards：保持动画结束后的状态（默认），  backwards：动画结束后回到最初的状态。**
+
+7. 运动曲线：
+```javascript
+animation-timing-function: ease-in;
+```
+**属性值可以是：linear   ease-in-out 等**
+
+
+**综合缩写**
+```javascript
+ animation: 定义的动画名称 持续时间  执行次数  是否反向  运动曲线 延迟执行;(infinite 表示无限次)
+
+ animation: move1 1s  alternate linear 3;
+
+ animation: move2 4s;
+```
