--- a/docs/CSS/过渡/过渡.md
+++ b/docs/CSS/过渡/过渡.md
@@ -2,7 +2,7 @@
 
 ------
 
-## 过渡效果
+## 1.过渡效果
 
 `transition`的中文含义是**过渡**。可以实现元素**不同状态间的平滑过渡**（补间动画），经常用来制作动画效果。
 
@@ -76,117 +76,5 @@ transition: all 3s linear 0s;
 </style>
 <body>
 <div class="box"></div>
-</body>
-```
-
-## 2D转换
-
-**转换** 可以实现元素的**位移、旋转、变形、缩放**
-
-**1.缩放scale**
-
-```javascript
-transform: scale(x, y);
-
-transform: scale(2, 0.5);
-```
-
-参数解释： 
-
-- x：表示水平方向的缩放倍数。
-- y：表示垂直方向的缩放倍数。如果只写一个值就是等比例缩放。
-- 取值：大于1表示放大，小于1表示缩小。不能为百分比。
-
-**举例**
-```html
-    <style>
-        .box {
-            width: 1000px;
-            margin: 100px auto;
-        }
-
-        .box div {
-            width: 300px;
-            height: 150px;
-            background-color: pink;
-            float: left;
-            margin-right: 15px;
-            color: white;
-            text-align: center;
-            font: 400 30px/150px “宋体”;
-
-        }
-
-        .box .box2 {
-            background-color: green;
-            transition: all 1s;
-        }
-
-        .box .box2:hover {
-            /*width: 500px;*/
-            /*height: 400px;*/
-            background-color: yellowgreen;
-
-            /* transform:  css3中用于做变换的属性
-                scale(x,y)：缩放 */
-            transform: scale(2, 0.5);
-        }
-
-    </style>
-<body>
-<div class="box">
-    <div class="box1">1</div>
-    <div class="box2">2</div>
-    <div class="box3">3</div>
-</div>
-</body>
-```
-
-**位移translate**
-
-```javascript
-transform: translate(水平位移, 垂直位移);
-
-transform: translate(-50%, -50%)
-```
-
-参数解释：
-
-- 参数为百分比，相对于自身移动。
-- 正值：向右和向下。 负值：向左和向上。如果只写一个值，则表示水平移动。
-
-**举例：**
-```html
-    <style>
-        .box {
-            width: 1000px;
-            margin: 100px auto;
-        }
-
-        .box > div {
-            width: 300px;
-            height: 150px;
-            border: 1px solid #000;
-            background-color: red;
-            float: left;
-            margin-right: 30px;
-        }
-
-        div:nth-child(2) {
-            background-color: pink;
-            transition: all 1s;
-        }
-
-        /* translate:(水平位移，垂直位移)*/
-        div:nth-child(2):hover {
-            transform: translate(-50%, -50%);
-        }
-    </style>
-<body>
-<div class="box">
-    <div class="box1">1</div>
-    <div class="box2">2</div>
-    <div class="box3">3</div>
-</div>
 </body>
 ```
